# hsmk-mathematical-library

./: .gitignore  CMakeLists.txt  Doxyfile  GPATH  GRTAGS  GTAGS  LICENSE  README.md  config.yaml  main.m  teI.md  text_simplexIntegral.md  u.mat
C/: CMakeLists.txt
C/doc/: integral_doc.md  matrix_doc.md  sort_doc.md  stack_doc.md  toolbox_doc.md
C/include/BinaryTree/: compBinaryTree.h
C/include/Integral/: integral.h
C/include/List/: list.h
C/include/Matrix/: matrix.h  vector.h
C/include/Pair/: pair.h
C/include/Queue/: queue.h
C/include/Random/: random.h
C/include/Sort/: sort.h
C/include/Stack/: stack.h
C/include/StdDef/: constDef.h  exception.h  memswap.h  result.h
C/include/Toolbox/: toolbox.h
C/src/BinaryTree/: compBinaryTree.c
C/src/Integral/: integral.c
C/src/Matrix/: matrix.c  vector.c
C/src/Pair/: pair.c
C/src/Sort/: sort.c
C/src/Toolbox/: toolbox.c
C/tests/: main.c
C/withExcepton/include/Stack/: stack.h
Java/: TEI.md
Java/com.hsmkmathlib/simplexIntegral/: IntegralBase.java  PointClass.java  SimplexIntegral.java  TetrahedronIntegral.java  TetrahedronSimplexIntegral.java  TriangleIntegral.java  TriangleSimplexIntegral.java  package-info.java
Java/com.hsmkmathlib/sort/: package-info.java
Java/com.hsmkmathlib/test/: Main.java
Java/com.hsmkmathlib/tools/: ArrayTools.java
Java/demo/: pom.xml
Java/doc/: allclasses-index.html  allpackages-index.html  constant-values.html  deprecated-list.html  element-list  help-doc.html  index.html  member-search-index.js  overview-summary.html  overview-tree.html  package-search-index.js  search.html  type-search-index.js
Java/doc/index-files/: index-1.html  index-10.html  index-11.html  index-12.html  index-13.html  index-14.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index-9.html
Java/doc/test/: Main.html  RandomArrayGenerator.html  package-summary.html  package-tree.html
Java/doc/tools/: ArrayTools.html  package-summary.html  package-tree.html
Rust/hsmk-mathematical-library/: Cargo.toml
Rust/hsmk-mathematical-library/src/: main.rs
delphi/: ArrayHelperUnit.pas  FuncToolPublicUnit.pas  FunctionToolUnit.pas  GeneralTypeUnit.pas  TestUnit.pas  delphi.gitignore
delphi/Array/: ArrayHelperUnit.pas  CLikeFunctionToolsUnit.pas  SortFunctionToolUnit.pas
delphi/General/: ExceptionStrConstsUnit.pas  FuncToolPublicUnit.pas  GeneralTypeUnit.pas
doc/: matrix_doc.md  sort_doc.md  stack_doc.md  toolbox_doc.md
en-US/C/src/: arraylist.c
en-US/matlab/html/: lSParabola._help.html
en-US/matlab/toolbox/: caculate_func.m  createValidatorException.m  func.m  get2ndBoundaryPoint.m  getPMatrix.m  getSMatrix.m  isFunOrNumOrSym.m  isdecimal.m  mustBeUnderlyingType_vec.m
go/: go.mod
go/sort/: BasedSort.go
include/Integral/: integral.h
include/List/: list.h
include/Matrix/: matrix.h  vector.h
include/Pair/: pair.h
include/Queue/: queue.h
include/Random/: random.h
include/Sort/: sort.h
include/Stack/: stack.h
include/StdDef/: constDef.h  memswap.h
include/Toolbox/: toolbox.h
matlab/: main.m
matlab/Numerical_analysis/curveFitting/: lSParabola._help.mlx  lSline.m  lSline_help.mlx
matlab/Numerical_analysis/differentialEquation/: eulerMethod.m  heunMethod.m  heunMwthod_help.mlx
matlab/Numerical_analysis/interpolation/: Coordinates.m  LagrangeInterpolation.m
matlab/Numerical_analysis/linearSystem/: jacobi.m
matlab/Numerical_analysis/nonlinearEquations/: binarySearch.m
matlab/PDE/ellipticEquation/: differenceWith1stBoundary.m  differenceWith2ndAnd3rdBoundary.m
matlab/PDE/finite_difference_method/: differenceWith1thBoundary.m
matlab/PDE/hyperbolicEquation/: Lax_Wendroff2orderWith1stBoundary.m  Lax_Wendroff4orderWith1stBoundary.m  UpwindFormatWith1stBoundary.m  forwardWithViscosAnd1stBounary.m  richardsonWithViscosAnd1stBounary.m
matlab/PDE/parabolicEquation/: Richardson.m  backwardDifferenceWith1stBoundary.m  backwordDifferenceWith1stBoundary.m  forwordDifferenceWith1stBoundary.m
matlab/hsmk/: Tool.m
matlab/hsmk/curveFitting/: LeastSquares.m
matlab/hsmk/differentialEquation/: eulerMethod.m
matlab/hsmk/interpolation/: Coordinates.m  Interpolation.asv  Interpolation.m  LagrangeInterpolation.m  NewtonPolynomial.m  (+3 more)
matlab/html/: eulerMethod_help.html  heunMwthod_help.html  lSParabola._help.html
matlab/simplexIntegral/: TetrahedronSimplexIntegral.m  TriangleSimplexIntegral.m
matlab/toolbox/: cellTranpose.m  getMatrix.m  range_check.m  vectorStandardization.m  vectorTranspose.m
matlab/tools/: calculateTetrahedronMAndMfAndMi.m  calculateTriangleMAndMf.m  generateEquationsBVec.m  generateLambdaEquations.m  generateSyms.m  generate_permutations_unique.m  getEnableLambdaOrderValues.m  printEquations.m  printTheSolutions.m  sortTheSolutionByTheSumOfNodesAndDegree.m
src/Integral/: integral.c
src/List/: list.c
src/Matrix/: matrix.c  vector.c
src/Pair/: pair.c
src/Queue/: queue.c
src/Sort/: sort.c
src/Stack/: stack.c
src/Toolbox/: toolbox.c
zh-CN/C/: ConstDef.h  CustomSort.c  CustomSort.h
(+162 files in other folders)
